--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-rootdbshdbchdbcdhcbd public URL by running `npm run build`.
+Shahroz
     -->
     <title>HOPE 3G</title>
   </head>
